<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">
   <androidx.appcompat.widget.LinearLayoutCompat
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="10dp"
       android:orientation="vertical">
       <androidx.appcompat.widget.Toolbar
           android:id="@+id/tblAgregarTarea"
           android:layout_width="match_parent"
           android:layout_height="?attr/actionBarSize"
           android:background="?attr/colorPrimary"
           app:title="Registrar"
           app:titleTextColor="@android:color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CrearCuenta"
            android:textSize="25sp"
            android:gravity="center"/>

       <com.airbnb.lottie.LottieAnimationView
           android:layout_width="200dp"
           android:layout_height="200dp"
           app:lottie_autoPlay="true"
           app:lottie_fileName="registro.json"
           app:lottie_imageAssetsFolder="assets"
           app:lottie_loop="true"
           android:layout_gravity="center"
           android:layout_marginTop="10dp"/>
       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="15dp">
           <EditText
               android:id="@+id/Nombre"
               android:hint="@string/Nombre"
               android:inputType="textPersonName|textCapWords"
               android:padding="20dp"
               android:drawablePadding="10dp"
               android:drawableStart="@drawable/icono_nombres"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="15dp">
           <EditText
               android:id="@+id/correo"
               android:hint="@string/Correo"
               android:inputType="textEmailAddress"
               android:padding="20dp"
               android:drawablePadding="10dp"
               android:drawableStart="@drawable/icono_email"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="15dp"
           app:passwordToggleEnabled="true"
           app:hintEnabled="false">
           <EditText
               android:id="@+id/contrasena"
               android:hint="@string/Contraseña"
               android:inputType="textPassword"
               android:padding="20dp"
               android:drawablePadding="10dp"
               android:drawableStart="@drawable/icono_contrasena"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="15dp"
           app:passwordToggleEnabled="true"
           app:hintEnabled="false">
           <EditText
               android:id="@+id/confirmar_contrasena"
               android:hint="@string/Confirmar_Contraseña"
               android:inputType="textPassword"
               android:padding="20dp"
               android:drawablePadding="10dp"
               android:drawableStart="@drawable/icono_contrasena"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>
       </com.google.android.material.textfield.TextInputLayout>

       <Button
           android:id="@+id/btnRegistrar"
           android:text="@string/Registrar_Usuario"
           android:layout_marginTop="15dp"
           android:textSize="15sp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
       <TextView
           android:id="@+id/txtCuentaYaCreada"
           android:text="@string/Cuanta_Ya_Creada"
           android:gravity="center"
           android:textStyle="bold"
           android:textSize="15sp"
           android:layout_marginTop="15dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>

   </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>